# strife

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.run/: django.run.xml  tailwind.run.xml  zshrc.run.xml
scripts/: graph_models.sh  tailwind.sh
strife/: asgi.py  manage.py  settings.py  urls.py  utils.py  wsgi.py
strife/apps/channels/: admin.py  apps.py  models.py  urls.py  views.py
strife/apps/channels/migrations/: 0001_initial.py  0002_initial.py  0003_alter_messageable_server_alter_speakable_server.py  0003_messageable_created_at_stagechannel_created_at_and_more.py  0004_remove_stagechannel_created_at_and_more.py  0005_messageable_updated_at_speakable_updated_at.py
strife/apps/emoji/: admin.py  apps.py  models.py
strife/apps/emoji/migrations/: 0001_initial.py  0002_emoji_created_at.py  0003_emoji_updated_at.py
strife/apps/home/: apps.py  consumers.py  urls.py  views.py
strife/apps/messages/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
strife/apps/messages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_author_alter_message_channel.py  0003_attachment.py  0003_message_is_edited.py  0004_attachment_filename.py
strife/apps/permissions/: admin.py  apps.py  forms.py  models.py
strife/apps/permissions/migrations/: 0001_initial.py  0002_alter_permissions_options.py
strife/apps/reactions/: admin.py  apps.py  models.py
strife/apps/reactions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_reaction_emoji_alter_reaction_message_and_more.py  0004_remove_reaction_description_remove_reaction_name_and_more.py  0005_reaction_updated_at.py
strife/apps/roles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
strife/apps/roles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_role_server.py  0003_permissions_role_permissions.py  0003_role_created_at_role_updated_at.py  0003_role_permissions.py  0004_alter_role_members.py  0005_alter_role_options.py
strife/apps/servers/: admin.py  apps.py  consumers.py  models.py  signals.py  urls.py  views.py
strife/apps/servers/migrations/: 0001_initial.py  0002_initial.py  0003_alter_server_owner.py  0003_member_first_joined_at_server_updated_at.py  0003_owner_nickname.py  (+4 more)
strife/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
strife/settings/: __init__.py  dev.secret.py  dev_secret.py  prod.secret.py  prod_secret.py
strife/static/js/: sockets.js
strife/strife/: urls.py
strife/templates/: base.html  form.html
strife/templates/forms/: fields.html  page.html  renderer.html
strife/theme/: apps.py
strife/theme/static_src/: package-lock.json  package.json
(+45 files in other folders)
