[tool.poetry]
name = "strife"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~=5.0"
django-polymorphic = "^3.1.0"
pillow = "^10.4.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
django-extensions = "^3.2.3"
pyparsing = "^3.1.2"
pydot = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
