[tool.poetry]
name = "strife"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~=5.0"
django-polymorphic = "^3.1.0"
pillow = "^10.4.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
django-extensions = "^3.2.3"
pyparsing = "^3.1.2"
pydot = "^3.0.1"
channels = {extras = ["daphne"], version = "^4.1.0"}
channels-redis = "^4.2.0"
djlint = "^1.34.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [
    ".github",
    "secret",
    "media",
    "migrations"
]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # pydocstyle
    "D",
    # flake8-django
    "DJ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-boolean-trap
    "FBT",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # Pylint
    "PL",
    # Pytest
    "PT",
    # pygrep hooks
    "PGH",
    # ruff
    "RUF",
    # pyupgrade
    "UP",
]
ignore = [
  # missing docstring
  "D1",
  # periods at the end of docstrings
  "D415",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
  "D206",
  "D300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.djlint]
profile = "django"
